Fixing styles on mobile

--- a/src/client/styles/chatNotifications.scss
+++ b/src/client/styles/chatNotifications.scss
@@ -513,18 +513,20 @@
   }
 }
 .active-chat-main-container-mobile{
-  display: none;
-  &:first-child{
-    display: flex;
+  @media all and (max-width: 768px){
+    display: none;
+    &:first-child{
+      display: flex;
+    }
   }
 }
 .active-chat-container-mobile{
   position: absolute;
-  top: 60px;
+  top: 80px;
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  z-index: 99;
+  z-index: 9;
   width: 100%;
   height: auto;
   margin-top: -20px;
